--- a/src/app/shogi/tile/tile.component.css
+++ b/src/app/shogi/tile/tile.component.css
@@ -2,10 +2,17 @@ span {
     width: 100%;
     height: 100%;
     display: block;
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
 /*I hate css this is 2px smaller than it's container it's because of the border each size is 1px twice
-I spend way to long trying to fix it 
+I spend way to long trying to fix it
 */
+}
+
+img {
+  max-width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: block;
+  margin: auto;
 }
