--- a/src/app/shogi/board/board.component.css
+++ b/src/app/shogi/board/board.component.css
@@ -1,8 +1,20 @@
 
-
 .grid-item {
     background-color: #e6c4a4;
     border: 1px solid rgb(168, 109, 76);
     aspect-ratio: inherit;
     box-sizing: border-box;
   }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(9, 1fr);
+  /*max-width: 100vw; /* Restrict the body to the width of the viewport */
+  box-sizing: border-box;
+  /* max-width: 50vw; */
+  max-height: 500px;
+  aspect-ratio: 1 / 1;
+  min-width: 225px;
+  min-height: 225px;
+}
