--- a/src/app/shogi/board/board.component.css
+++ b/src/app/shogi/board/board.component.css
@@ -2,19 +2,39 @@
 .grid-item {
     background-color: #e6c4a4;
     border: 1px solid rgb(168, 109, 76);
-    aspect-ratio: inherit;
     box-sizing: border-box;
-  }
+  aspect-ratio: 1/1;
+
+}
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(9, 1fr);
+  grid-template-columns: repeat(11, 1fr);
   grid-template-rows: repeat(9, 1fr);
-  /*max-width: 100vw; /* Restrict the body to the width of the viewport */
   box-sizing: border-box;
   /* max-width: 50vw; */
   max-height: 500px;
-  aspect-ratio: 1 / 1;
+  aspect-ratio: 11/9;
   min-width: 225px;
   min-height: 225px;
 }
+
+.column-left{
+  grid-row: 1 / span 9;
+  max-height: 500px;
+  margin-right: 10px;
+
+
+}
+
+.column-right, .column-left{
+  background-color: cadetblue;
+}
+
+.column-right{
+  margin-left: 10px;
+  grid-column: 11; /* Places it in the 11th column */
+  grid-row: 1 / span 9; /* Spans all 9 rows */
+  max-height: 500px;
+}
+
