--- a/src/app/shogi/board/board.component.html
+++ b/src/app/shogi/board/board.component.html
@@ -1,15 +1,23 @@
-
 <div class="grid-container">
-  <shogi-hand class="column-left" [komas]="goteKomas"></shogi-hand>
+  <shogi-hand class="column-left"
+              [komas]="goteKomas"
+              player="gote"
+              (komaUnSelected)="handleTileUnselect()">
+  </shogi-hand>
   @for (row of boardTiles; track $index) {
-    @for(tile of row; track $index){
-      <shogi-tile class="grid-item"  [tile]="tile"
-                  (tileSelected)="handleTileSelect($event)"
+    @for (tile of row; track $index) {
+      <shogi-tile class="grid-item" [tile]="tile"
+                  (tileSelected)="handleTileSelectFromBoard($event)"
                   (tileDropped)="handleTileDrop($event)"
-                  (tileUnSelected)="handleTileUnselect()"></shogi-tile>
+                  (tileUnSelected)="handleTileUnselect()">
+      </shogi-tile>
     }
   }
-  <shogi-hand class="column-right"  [komas]="senteKomas"></shogi-hand>
+  <shogi-hand class="column-right" [komas]="senteKomas"
+              player="sente"
+              (komaSelected)="handleKomaSelectFromHand($event)"
+              (komaUnSelected)="handleTileUnselect()">
+  </shogi-hand>
 
 </div>
 
