--- a/src/app/shogi/hand/hand.component.html
+++ b/src/app/shogi/hand/hand.component.html
@@ -1,3 +1,10 @@
-@for (koma of komas; track $index){
-  <img  [src]="getSvg(koma)" alt="shogi piece">
+
+@for (koma of komas ; track $index){
+  <span matBadge="{{koma[1]}}"
+        (dragend)="onDragEnd($event)"
+  >
+  <img [src]="getSvg(koma[0],this.player)"
+       (dragstart)="onDragStart({kind:koma[0],player:this.player})"
+       alt="shogi piece">
+</span>
 }
