double click promotes

--- a/src/app/shogi/board/board.component.html
+++ b/src/app/shogi/board/board.component.html
@@ -9,7 +9,8 @@
       <shogi-tile class="grid-item" [tile]="tile"
                   (tileSelected)="handleTileSelectFromBoard($event)"
                   (tileDropped)="handleTileDrop($event)"
-                  (tileUnSelected)="handleTileUnselect()">
+                  (tileUnSelected)="handleTileUnselect()"
+                  (tileDoubleClicked)="handleTileDblClick($event)">
       </shogi-tile>
     }
   }
