--- a/src/app/shogi/move-list/move-list.component.html
+++ b/src/app/shogi/move-list/move-list.component.html
@@ -5,8 +5,10 @@
         [destination]="move.destination"
         [movement]="move.movement"
         [origin]="move.origin"
-        [piece]="move.piece"
-        [promotion]="move.promotion">
+        [koma]="move.koma"
+        [player]="move.player"
+        [promotion]="move.promotion"
+        [eatenKoma]="move.eatenKoma">
       </app-move>
     </li>
   }
