[WIP] refactoring code: undo

--- a/src/app/shogi/modules/board/board.component.html
+++ b/src/app/shogi/modules/board/board.component.html
@@ -17,7 +17,7 @@
               player="sente"
   >
   </shogi-hand>
-  <button mat-icon-button color="primary">
+  <button mat-icon-button color="primary" (click)="handleUndoClick()">
     <mat-icon>undo</mat-icon>
   </button>
 </div>
