--- a/src/app/shogi/modules/board/board.component.html
+++ b/src/app/shogi/modules/board/board.component.html
@@ -10,7 +10,12 @@
                 [tile]="tile">
     </shogi-tile>
   }
+  <ol>
 
+    @for (tile of boardView(); track $index) {
+      <li>{{ tile.x }}-{{ tile.y }}</li>
+    }
+  </ol>
 
   <shogi-hand class="column-right"
               [komas]="shogiBoard.senteKomas"
