feat: added colours

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<shogi-board ></shogi-board>
+<mat-toolbar class="mat-toolbar">
+  <span>shogi kifu</span>
+</mat-toolbar>
+<shogi-board id="board"></shogi-board>
 <app-move-list></app-move-list>
