--- a/src/app/shogi/modules/tile/tile.component.scss
+++ b/src/app/shogi/modules/tile/tile.component.scss
@@ -1,13 +1,16 @@
+span {
+  width: 100%;
+  height: 100%;
+  display: block;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 img {
   max-width: 100%;
   height: 100%;
   object-fit: contain;
   display: block;
   margin: auto;
-  aspect-ratio: 1/1;
-}
-
-.hand-item {
-  box-sizing: border-box;
   aspect-ratio: 1/1;
 }
