feat: added nav bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<mat-toolbar class="mat-toolbar">
-  <span>shogi kifu</span>
-</mat-toolbar>
-<shogi-board id="board"></shogi-board>
-<app-move-list></app-move-list>
+<app-navigation></app-navigation>
