--- a/src/app/shogi/modules/move-list/move-list.component.scss
+++ b/src/app/shogi/modules/move-list/move-list.component.scss
@@ -1,5 +1,10 @@
 :host {
   overflow: hidden;
   overflow-y: scroll;
-  max-height: 200px;
+  max-height: 500px;
+  width: 15vw;
+  background-color: #ba9063;
+  display: block;
 }
+
+
