feat: tile is colored on move

--- a/src/app/shogi/modules/tile/tile.component.html
+++ b/src/app/shogi/modules/tile/tile.component.html
@@ -1,4 +1,5 @@
-<span (drop)="onDrop($event,tile)" (dragover)="allowDrop($event)">
+<span (drop)="onDrop($event,tile)" (dragover)="allowDrop($event)"
+      [style.backgroundColor]="tile.color">
     <ng-container *ngIf="tile.koma">
     <img (dragstart)="onDragStart(tile)"
          (dblclick)="onDoubleClick(tile)"
