feat: img is colored on drag over / hover

--- a/src/app/shogi/modules/hand/hand.component.html
+++ b/src/app/shogi/modules/hand/hand.component.html
@@ -3,7 +3,7 @@
         [ngStyle]="player === 'sente' ? {'grid-row': 9- $index} : {}">
 
   <img [src]="getSvg(koma[0],this.player)"
-
+       class="koma-svg"
        (dragstart)="onDragStart({kind:koma[0],player:this.player})"
        alt="shogi piece">
 </span>
