--- a/src/app/shogi/modules/play-area-tournament/play-area-tournament.component.scss
+++ b/src/app/shogi/modules/play-area-tournament/play-area-tournament.component.scss
@@ -1,3 +1,11 @@
 :host {
   display: flex;
+  flex-wrap: wrap;
+}
+
+
+@media screen and (max-width: 700px) {
+  app-move-list {
+    width: 50%;
+  }
 }
