--- a/src/app/shogi/styles/koma.scss
+++ b/src/app/shogi/styles/koma.scss
@@ -13,3 +13,7 @@
 .koma-svg:hover {
   background-color: var(--mat-sys-on-primary-container);
 }
+
+.selected-koma {
+  background-color: var(--mat-sys-on-secondary-container);
+}
