--- a/src/app/shogi/modules/tile/tile.component.html
+++ b/src/app/shogi/modules/tile/tile.component.html
@@ -1,4 +1,6 @@
-<span (drop)="onDrop($event,tile)" (dragover)="dragOver($event)" (dragleave)="dragLeave($event)">
+<span (drop)="onDrop($event,tile)"
+      (dragover)="dragOver($event)"
+      (dragleave)="dragLeave($event)">
     <ng-container *ngIf="tile.koma">
     <img (dragstart)="onDragStart(tile)"
          (dblclick)="onDoubleClick(tile)"
